--- a/views/about.hbs
+++ b/views/about.hbs
@@ -35,43 +35,65 @@
                 <div class="card horizontal blue-grey darken-4">
 
                     <!-- Image  -->
-                    <div class="card-image hide-on-med-and-down">
-                        <img
-                            class="controllerImageBig"
-                            src="/images/portrait.jpg"
-                        />
-                    </div>
+
+                    <img
+                        class="controllerImageBig hide-on-med-and-down"
+                        src="/images/portrait.jpg"
+                    />
 
                     <div class="card-stacked">
                         <div class="card-content grey-text text-lighten-4">
-                            <h5
-                                class="orange-text controllerTitle"
-                            >Biography</h5>
+                            <h5 class="orange-text controllerTitle">
+                                Biography</h5>
                             <p class="section">
-                                Hi! My name is Manuel Lerchner and I am
-                                passionate about informatics, programming, and
-                                science.
+                                Hi!<br />
+                                My name is Manuel Lerchner and I am passionate
+                                about informatics, programming, and science.
                             </p>
                             <p class="section">
-                                I love learning, solving problems, and building
-                                things and I want to use these talents to design
-                                things and create systems that benefit humanity.
-                                <br />
-                                I want to have a part in developing technologies
-                                that will improve people’s lives and help
-                                further our understanding of the universe.</p>
-                            <p class="section">
-                                This year I graduated from the TFO-Bruneck with
-                                a specialization on electronics and automation
-                                engineering in Bruneck, Italy.<br />
-                                Next year I intend to start studying computer
-                                science in Munich, Germany.
+                                Ever since my early childhood, I have been very
+                                interested in technology and how technical
+                                devices work. This interest continues to the
+                                present day, and even today I forget everything
+                                around me when I'm tinkering with a project.
+                                Especially in the last few years, my interest
+                                has increasingly turned towards computer
+                                technology, which has allowed me to spend more
+                                time on computer science in my spare time. Thus
+                                I could already collect some programming
+                                experiences in different programming languages
+                                during the realization of smaller projects.
+                                <br />I love learning, solving problems, and
+                                building things and I want to use these talents
+                                to design things and create systems that benefit
+                                humanity and want to have a part in developing
+                                technologies that will improve people’s lives
+                                and help further our understanding of the
+                                universe.
                             </p>
-                            <p>
+                            <p class="section">
+                                In 2021 I graduated from
+                                <a
+                                    href="https://www.tfo-bruneck.it/"
+                                >TFO-Bruneck</a>
+                                (High-School) with a specialization on
+                                electronics and automation engineering in
+                                Bruneck, Italy. And was able to achieve top
+                                grades in my A-Levels.<br />
+                                Currently pursuing a bachelor's degree in
+                                computer science at the
+                                <a href="https://www.tum.de/">Technical
+                                    University of Munich</a>
+                                in Germany.
+                            </p>
+                            <p class="section">
                                 If you have any questions, comments, or just
                                 want to chat, feel free to get in
                                 <a href="/contact">contact </a>
-                                with me.</p>
+                                with me. I will be happy to answer your
+                                questions.
+                            </p>
+
                         </div>
 
                     </div>
