--- a/views/about.hbs
+++ b/views/about.hbs
@@ -80,7 +80,7 @@
                                 electronics and automation engineering in
                                 Bruneck, Italy. And was able to achieve top
                                 grades in my A-Levels.<br />
-                                Currently pursuing a bachelor's degree in
+                                Currently I am pursuing a bachelor's degree in
                                 computer science at the
                                 <a href="https://www.tum.de/">Technical
                                     University of Munich</a>
