--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,14 +205,13 @@ body {
     max-width: 220px;
     max-height: 280px;
 
-    border-top-left-radius: 8px !important;
-    border-bottom-left-radius: 8px !important;
-    border-top-right-radius: 4px !important;
-    border-bottom-right-radius: 4px !important;
+    border-top-left-radius: 10px !important;
+    border-bottom-left-radius: 10px !important;
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
 }
 
 .controllerImageBig {
-    padding: 1px;
     max-height: 100%;
     object-fit: cover;
 }
@@ -344,4 +343,20 @@ html {
 
 .fullheightImage {
     height: 100% !important;
+}
+
+.card-image img:not(.controllerImage) {
+    border-top-left-radius: 10px !important;
+    border-top-right-radius: 10px !important;
+}
+
+.card {
+    border-radius: 10px !important;
+    border: none;
+    outline: 2px solid black !important;
+}
+
+.card-action {
+    border-bottom-left-radius: 10px !important;
+    border-bottom-right-radius: 10px !important;
 }
