--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -3,20 +3,19 @@
         <div class="row">
             <div class="col s4 l4">
                 <h5 class="orange-text descriptionText">About</h5>
-                <p class="grey-text text-lighten-4">This is my personal website
-                    and a place for me to share some of the projects I am
-                    working on.<br />
-                    Feel free to contact me with any questions, comments, or
-                    concerns. I will get back to you as soon as I can!
+                <p class="grey-text text-lighten-4">This is my personal website and a place for me
+                    to share some of the projects I am working on.<br />
+                    Feel free to contact me with any questions, comments, or concerns. I will get
+                    back to you as soon as I can!
                 </p>
 
             </div>
 
             <div class="col s4 l3 offset-l1">
                 <h5 class="orange-text descriptionText">Contact Me</h5>
-                <p><i class="material-icons tiny">mail_outline</i>
+                <p><span class="iconify" data-icon="eva:email-outline" data-inline="true"></span>
                     manuel.lerchner<wbr />1111@gmail.com</p>
-                <p><i class="material-icons tiny">phone_android</i>
+                <p><span class="iconify" data-icon="bi:phone" data-inline="true"> </span>
                     +39 388 627 6090</p>
             </div>
 
@@ -24,14 +23,8 @@
                 <h5 class="orange-text descriptionText">Social Media</h5>
                 <ul>
                     <p class="youtube">
-                        <a
-                            href="https://www.youtube.com/channel/UCvIGqQ5pelOqwaKOFaqiP4w"
-                        >
-                            <span
-                                class="iconify"
-                                data-icon="mdi-youtube"
-                                data-inline="false"
-                            ></span>
+                        <a href="https://www.youtube.com/channel/UCvIGqQ5pelOqwaKOFaqiP4w">
+                            <span class="iconify" data-icon="mdi-youtube" data-inline="true"></span>
                             Youtube</a>
                     </p>
                     <p class="twitter">
@@ -39,7 +32,7 @@
                             <span
                                 class="iconify"
                                 data-icon="akar-icons:twitter-fill"
-                                data-inline="false"
+                                data-inline="true"
                             ></span>
                             Twitter&nbsp</a>
                     </p>
@@ -48,7 +41,7 @@
                             <span
                                 class="iconify"
                                 data-icon="akar-icons:github-fill"
-                                data-inline="false"
+                                data-inline="true"
                             ></span>
                             Github&nbsp&nbsp</a>
                     </p>
