--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,14 +18,13 @@
         <meta name="language" content="English" />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script
-            async
-            src="https://www.googletagmanager.com/gtag/js?id=G-JZ8R2FF9B4"
-        ></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-4ESP3J0S9H"></script>
         <script>
-            window.dataLayer = window.dataLayer || []; function
-            gtag(){dataLayer.push(arguments);} gtag('js', new Date());
-            gtag('config', 'G-JZ8R2FF9B4');
+            window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-4ESP3J0S9H');
         </script>
 
         <script
