change image scaling

--- a/views/projects/lambdaCalculus.hbs
+++ b/views/projects/lambdaCalculus.hbs
@@ -40,7 +40,7 @@ date: "30. Jul 2021"
             </div>
 
             <div class="parallax"><img
-                    class="blurr"
+                    class="blurr parallaxImage"
                     src="/images/halfLive.jpg"
                 /></div>
         </div>
