--- a/views/projects/lambdaCalculus.hbs
+++ b/views/projects/lambdaCalculus.hbs
@@ -38,7 +38,7 @@ date: "30. Jul 2021"
                 </div>
             </div>
 
-            <div class="parallax"><img
+            <div class="parallax"><amp-img
                     class="blurr parallaxImage"
                     src="/images/halfLive.jpg"
                 /></div>
@@ -83,7 +83,7 @@ date: "30. Jul 2021"
                     </div>
 
                     <div class="card-image hide-on-med-and-down">
-                        <img src="/projects/content.png" />
+                        <amp-img src="/projects/content.png" />
                     </div>
                 </div>
             </div>
@@ -453,7 +453,7 @@ date: "30. Jul 2021"
                                     its sub-nodes.
                                 </p>
 
-                                <img class="center inlineImg" src="/projects/lambdaAST.png" />
+                                <amp-img class="center inlineImg" src="/projects/lambdaAST.png" />
 
                             </div>
                         </div>
@@ -646,7 +646,7 @@ date: "30. Jul 2021"
                                 </div>
 
                                 <p class="section">Here you can see the full AST of this input:</p>
-                                <img class="center inlineImg" src="/projects/AND.png" />
+                                <amp-img class="center inlineImg" src="/projects/AND.png" />
 
                                 <h5
                                     class="blue-text text-darken-1 projectSubTitle"
@@ -764,7 +764,7 @@ date: "30. Jul 2021"
                                 </div>
 
                                 <p class="section">Here you can see the full AST of this input:</p>
-                                <img class="center inlineImg" src="/projects/MULT.png" />
+                                <amp-img class="center inlineImg" src="/projects/MULT.png" />
 
                                 <h5
                                     class="blue-text text-darken-1 projectSubTitle"
@@ -844,7 +844,7 @@ date: "30. Jul 2021"
                                 </div>
 
                                 <p class="section">Here you can see the full AST of this input:</p>
-                                <img class="center inlineImgBig" src="/projects/FACT.png" />
+                                <amp-img class="center inlineImgBig" src="/projects/FACT.png" />
 
                             </div>
                         </div>
