--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -1,60 +1,63 @@
 <footer class="page-footer black spacer border footerText">
-    <div class="container">
-        <div class="row">
-            <div class="col s4 l4">
-                <h5 class="orange-text descriptionText">About</h5>
-                <p class="grey-text text-lighten-4">This is my personal website and a place for me
-                    to share some of the projects I am working on.<br />
-                    Feel free to contact me with any questions, comments, or concerns. I will get
-                    back to you as soon as I can!
-                </p>
 
-            </div>
-
-            <div class="col s4 l3 offset-l1">
-                <h5 class="orange-text descriptionText">Contact Me</h5>
-                <p><span class="iconify" data-icon="eva:email-outline" data-inline="true"></span>
-                    manuel.lerchner<wbr />1111@gmail.com</p>
-                <p><span class="iconify" data-icon="bi:phone" data-inline="true"> </span>
-                    +39 388 627 6090</p>
-            </div>
-
-            <div class="col s4 l3 offset-l1">
-                <h5 class="orange-text descriptionText">Social Media</h5>
-                <ul>
-                    <p class="youtube">
-                        <a href="https://www.youtube.com/channel/UCvIGqQ5pelOqwaKOFaqiP4w">
-                            <span class="iconify" data-icon="mdi-youtube" data-inline="true"></span>
-                            Youtube</a>
-                    </p>
-                    <p class="twitter">
-                        <a href="https://twitter.com/ManuelLerchner">
-                            <span
-                                class="iconify"
-                                data-icon="akar-icons:twitter-fill"
-                                data-inline="true"
-                            ></span>
-                            Twitter&nbsp</a>
-                    </p>
-                    <p class="github">
-                        <a href="https://github.com/ManuelLerchner">
-                            <span
-                                class="iconify"
-                                data-icon="akar-icons:github-fill"
-                                data-inline="true"
-                            ></span>
-                            Github&nbsp&nbsp</a>
-                    </p>
-                </ul>
-            </div>
+    <div class="row">
+        <div class="col s4 l3 offset-l1 offset-s1">
+            <h5 class="orange-text descriptionText">About</h5>
+            <p class="grey-text text-lighten-4">This is my personal website and a place for me to
+                share some of the projects I am working on.<br />
+                Feel free to contact me with any questions, comments, or concerns. I will get back
+                to you as soon as I can!
+            </p>
 
         </div>
-    </div>
 
+        <div class="col s3 l3 offset-l1">
+            <h5 class="orange-text descriptionText">Contact Me</h5>
+            <p><span class="iconify" data-icon="eva:email-fill" data-inline="true"></span>
+                manuel@manuellerchner.de</p>
+            <p><span class="iconify" data-icon="eva:email-outline" data-inline="true"></span>
+                manuel.lerchner<wbr />1111@gmail.com</p>
+            <p><span class="iconify" data-icon="bi:phone" data-inline="true"> </span>
+                +39 388 627 6090</p>
+        </div>
+
+        <div class="col s3 l3 offset-l1">
+            <h5 class="orange-text descriptionText">Social Media</h5>
+            <ul>
+                <p class="youtube">
+                    <a href="https://www.youtube.com/channel/UCvIGqQ5pelOqwaKOFaqiP4w">
+                        <span class="iconify" data-icon="mdi-youtube" data-inline="true"></span>
+                        Youtube</a>
+                </p>
+                <p class="twitter">
+                    <a href="https://twitter.com/ManuelLerchner">
+                        <span
+                            class="iconify"
+                            data-icon="akar-icons:twitter-fill"
+                            data-inline="true"
+                        ></span>
+                        Twitter&nbsp</a>
+                </p>
+                <p class="github">
+                    <a href="https://github.com/ManuelLerchner">
+                        <span
+                            class="iconify"
+                            data-icon="akar-icons:github-fill"
+                            data-inline="true"
+                        ></span>
+                        Github&nbsp&nbsp</a>
+                </p>
+            </ul>
+        </div>
+
+    </div>
     <div class="footer-copyright">
-        <div class="container">
-            Made by
-            <a class="brown-text text-lighten-3" href="/about">Manuel Lerchner</a>
+        <div class="center">
+            <span>
+
+                Made by
+                <a class="brown-text text-lighten-3" href="/about">Manuel Lerchner</a>
+            </span>
         </div>
     </div>
 </footer>
