--- a/views/projects/lambdaCalculus.hbs
+++ b/views/projects/lambdaCalculus.hbs
@@ -93,7 +93,7 @@ date: "30. Jul 2021"
         <div class="row" id="What is λ-calculus?">
             <div class="col l10 offset-l1 s12 m12">
 
-                <div class="card blue-grey darken-3">
+                <div class="blue-grey darken-4">
                     <div class="row">
                         <div class="col l10 offset-l1 s12 m12">
 
@@ -200,7 +200,7 @@ date: "30. Jul 2021"
         <div class="row" id="λ-Plan">
             <div class="col l10 offset-l1 s12 m12">
 
-                <div class="card blue-grey darken-3">
+                <div class="blue-grey darken-4">
                     <div class="row">
                         <div class="col l10 offset-l1 s12 m12">
 
@@ -291,7 +291,7 @@ date: "30. Jul 2021"
         <div class="row" id="λ-Lexer">
             <div class="col l10 offset-l1 s12 m12">
 
-                <div class="card blue-grey darken-3">
+                <div class=" blue-grey darken-4">
                     <div class="row">
                         <div class="col l10 offset-l1 s12 m12">
 
@@ -359,7 +359,7 @@ date: "30. Jul 2021"
         <div class="row" id="λ-Parser">
             <div class="col l10 offset-l1 s12 m12">
 
-                <div class="card blue-grey darken-3">
+                <div class=" blue-grey darken-4">
                     <div class="row">
                         <div class="col l10 offset-l1 s12 m12">
 
@@ -466,7 +466,7 @@ date: "30. Jul 2021"
         <div class="row" id="λ-Interpreter">
             <div class="col l10 offset-l1 s12 m12">
 
-                <div class="card blue-grey darken-3">
+                <div class=" blue-grey darken-4">
                     <div class="row">
                         <div class="col l10 offset-l1 s12 m12">
 
@@ -514,7 +514,7 @@ date: "30. Jul 2021"
         <div class="row" id="λ-Applications">
             <div class="col l10 offset-l1 s12 m12">
 
-                <div class="card blue-grey darken-3">
+                <div class=" blue-grey darken-4">
                     <div class="row">
                         <div class="col l10 offset-l1 s12 m12">
 
@@ -857,7 +857,7 @@ date: "30. Jul 2021"
         <div class="row" id="λ-Conclusion">
             <div class="col l10 offset-l1 s12 m12">
 
-                <div class="card blue-grey darken-3">
+                <div class="card blue-grey darken-4">
                     <div class="row">
                         <div class="col l10 offset-l1 s12 m12">
 
