add datenschutz/ impressum

--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -55,9 +55,19 @@
         <div class="center">
             <span>
 
-                Made by
-                <a class="brown-text text-lighten-3" href="/about">Manuel Lerchner</a>
+                <a href="/about"> &copy; Manuel Lerchner</a>
+
+                <a href="/datenschutzerklaerung">
+
+                    Datenschutzerklärung
+                </a>
+                <a href="/impressum">
+
+                    Impressum</a>
+
             </span>
+
         </div>
+
     </div>
 </footer>
