--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -8,10 +8,7 @@
 
                 <div class="logo-container">
 
-                    <a
-                        href="https://manuellerchner.de"
-                        class="brand-logo rainbow"
-                    >
+                    <a href="/" class="brand-logo rainbow">
 
                         <div class="Logo">
                             <img class="logoImage" src="/images/logo2.png" />
@@ -19,10 +16,7 @@
                         </div>
                     </a>
 
-                    <a
-                        class="LogoText hide-on-med-and-down rainbow"
-                        href="/"
-                    >Lerchner Manuel</a>
+                    <a class="LogoText hide-on-med-and-down rainbow" href="/">Lerchner Manuel</a>
 
                 </div>
             </div>
