remove old email

--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -13,8 +13,8 @@
 
         <div class="col s3 l3 offset-l1">
             <h5 class="orange-text descriptionText">Contact Me</h5>
-            <p><span class="iconify" data-icon="eva:email-fill" data-inline="true"></span>
-                manuel@manuellerchner.de</p>
+            {{!-- <p><span class="iconify" data-icon="eva:email-fill" data-inline="true"></span>
+                manuel@manuellerchner.de</p> --}}
             <p><span class="iconify" data-icon="eva:email-outline" data-inline="true"></span>
                 manuel.lerchner<wbr />1111@gmail.com</p>
             <p><span class="iconify" data-icon="bi:phone" data-inline="true"> </span>
