change some text on the controller page

--- a/views/controller.hbs
+++ b/views/controller.hbs
@@ -19,7 +19,7 @@
                         Controller</h1>
 
                     <h5 class="subtext center white-text text-lighten-2">Here
-                        you can interact with some reallife things I built</h5>
+                        you can interact with some reallife things I built using my RaspberryPi</h5>
 
                 </div>
             </div>
@@ -210,6 +210,9 @@
                                     class="grey-text text-lighten-4 hide-on-med-and-down controllerText"
                                 >Here you can toggle my PC-State from OFF to ON
                                     or viceversa.
+                                </p>
+                                <p class="grey-text text-lighten-4 hide-on-med-and-down controllerText">
+                                       (Currently out of use)
                                 </p>
                                 <p
                                     class="grey-text text-lighten-4 controllerText"
