--- a/views/projects/tileplanner.hbs
+++ b/views/projects/tileplanner.hbs
@@ -1,6 +1,6 @@
 <!-- Preview Data
 title: "Tile Planner",
-description: "A project built for my Dad to help him plan his next tile project. It is a simple web app that allows him to draw a floor plan and place tiles to it",
+description: "A project built for my Dad to help him plan his next tile project. It is a simple web app that allows him to draw a floor plan and place tiles into it",
 image: "/images/tile-planner.png",
 link: "https://tile-planner.manuellerchner.de",
 idx: "9",
