Update project descriptions and add new projects

--- a/views/projects/monopoly.hbs
+++ b/views/projects/monopoly.hbs
@@ -1,6 +1,6 @@
 <!-- Preview Data
 title: "Monopoly-Bank",
-description: "I built an website for a custom made 'Monopoly-Cities' I`ve built with my friends. The website represents the programming part of the project, while my colleagues planned and created the physical game",
+description: "I built a website for a custom-made 'Monopoly-Cities' I've built with my friends. The website is the programming part of the project, while my colleagues created the physical game",
 image: "/images/Monopoly.jpg",
 link: "https://monopoly.manuellerchner.de",
 idx: "3",
