--- a/views/projects/minecraftbot.hbs
+++ b/views/projects/minecraftbot.hbs
@@ -1,6 +1,6 @@
 <!-- Preview Data
 title: "Mineflayer-Compiler",
-description: "In this project I wanted to explore the mineflayer-api for minecraft bots. But instead of creating the underlying state-machine by hand, I built an entire compiler / programming language around it",
+description: "This project explores the mineflayer-api for minecraft bots. But instead of creating the underlying state-machine by hand, I built an entire compiler / programming language around it",
 image: "/images/MinecraftBot.png",
 link: "https://minecraft-bot.manuellerchner.de",
 idx: "7",
