--- a/views/projects/mocktrading.hbs
+++ b/views/projects/mocktrading.hbs
@@ -1,6 +1,6 @@
 <!-- Preview Data
 title: "Mock-Trading",
-description: "In this project, I built a simple Mock-Trading Website, where you can buy and sell cryptocurrencies. The prices get updated every 10 seconds, so you can see  how your money grows in real-time",
+description: "This project implements a Mock-Trading Website, where you can buy and sell cryptocurrencies. The prices get updated regularly, so you can see how your money grows in real-time",
 image: "/images/MockTrading.png",
 link: "https://mocktrading.manuellerchner.de",
 idx: "5",
