--- a/views/projects/taskplanner.hbs
+++ b/views/projects/taskplanner.hbs
@@ -1,6 +1,6 @@
 <!-- Preview Data
 title: "Task-Planner",
-description: "In this project, I built a small Task-Tracker website that allows you to keep track of your Projects. The website is built as a PWA, so you can download the website and use it offline as well",
+description: "This is a small Task-Tracker website that allows you to keep track of your Projects. The website is built as a PWA, so you can download the website and use it offline as well",
 image: "/images/TaskPlanner1.png",
 link: "https://taskplanner.manuellerchner.de",
 idx: "4"
